# Cards

./: .gitignore  Card.ipynb  Card.py  Cards.py  Makefile  app.py  card.db  cards.db  database.db  french.csv  go.mod  go.sum  main.go  main.py  pyproject.toml  readme.md
.ipynb_checkpoints/: Card-checkpoint.ipynb
cards/: Cargo.toml  __main__.py  app.py  db.py  guess.py  practice.py
cards/src/: cards.rs  main.rs
cmd/: args.go  card.go  practice.go  root.go  version.go
core/: card.go
core/util/: readCards.go  readConfig.go
french/: 5000_wordlist_french.csv  README.md  fr_short.csv
notebooks/: Card.ipynb
scripts/: populate-db.py
tests/: test_guess.py  test_practice.py
